# AMN

./: README.md  __init__.py  __main__.py  am0.py  am1.py  pyproject.toml  repl.py
.github/workflows/: Tests.yaml
AMN/: __init__.py  am0.py  am1.py  main.py
src/AMN/: __init__.py  __main__.py  am0.py  am1.py  main.py  repl.py
tests/: __init__.py  test_am0.py  test_am1.py  test_repl.py
