[project]
name = "AMN"
version = "0.6.0"
description = "Virtual machines for the AMN instructions sets"
requires-python = ">=3.10"
keywords = [
    "AM0",
    "AM1",
    "AMN"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Eric Niklas Wolf"
email = "eric_niklas.wolf@mailbox.tu-dresden.de"

[project.urls]
Repository = "https://github.com/Deric-W/study_utils/tree/main/Programming/AMN"
Bugtracker = "https://github.com/Deric-W/study_utils/issues"

[project.scripts]
amn = "AMN.main:main"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
AMN = ["py.typed"]